themes/bdev/assets/sass/components/_header.scss
.header {
  background-color: var(--dark);

  @include media('>tablet') {
    position: fixed;
    right: 0;
    left: 0;
    top: 0;
    z-index: 5;
  }

  &__inner {
    display: flex;
    justify-content: space-between;
    align-items: center;
    max-width: var(--content-width);
    padding: 0 var(--gutter);
    margin: 0 auto;
    border-bottom: 2px dashed var(--accent);

    @include media('>tablet') {
      border-bottom: none;
    }
  }

  h1 {
    font-size: 2rem;
    font-weight: bold;
    margin: var(--gutter) 0;

    span.dot {
      color: var(--accent);
      opacity: 1;
    }

    a {
      display: flex;
      align-items: center;
      justify-content: center;
      color: var(--light);

      span {
        opacity: 0.5;
      }
    }

    img {
      width: 37px;
      height: auto;
      margin-right: var(--gutter);
    }
  }

  nav.menu {
    @include media('<tablet') {
      transform: translateY(-100%);
      transition: transform 300ms cubic-bezier(0.175, 0.885, 0.32, 1.1);
      position: fixed;
      top: 0;
      right: 0;
      left: 0;
      bottom: 0;
      z-index: 5;
      display: flex;
      flex-direction: column;
      justify-content: center;
      background-color: var(--dark);
      background: linear-gradient(10deg, #313142 0%, #1b1b27 65%);

      a {
        font-size: 1.5rem;
        text-align: center;
        padding: 1rem var(--gutter);
        color: var(--light);

        &.showMobile {
          display: initial;
          visibility: visible;
        }
      }

      .lightSwitch {
        margin-top: 1.5rem;
      }
    }

    @include media('>tablet') {
      display: flex;
      flex: 1;
      justify-content: flex-end;
      align-items: center;

      a {
        margin-left: 2rem;
        transition: color 100ms;
        color: var(--light);

        &:hover {
          color: var(--accent);
        }

        &.showMobile {
          display: none;
          visibility: hidden;
        }
      }

      .lightSwitch {
        margin-left: 1.5rem;
      }
    }

    .lightSwitch {
      background-color: transparent;
      color: var(--light);
      border: none;
      cursor: pointer;
    }
  }

  .menuToggle {
    z-index: 6;
    color: var(--light);
    padding: 1rem;
    cursor: pointer;

    &__input {
      display: none;

      &:checked {
        ~ .menuToggle .menuToggle__open {
          display: none;
        }

        ~ .menuToggle .menuToggle__close {
          display: block;
          position: fixed;
          top: 1.5rem;
          right: 1.75rem;
        }

        ~ nav.menu {
          transform: translateY(0);
        }
      }
    }

    &__close {
      display: none;
    }

    @include media('>tablet') {
      display: none;
    }
  }

  .optionsMenuToggle {
    cursor: pointer;

    .icon {
        transition: transform 250ms;
    }

    
    &__input {
        display: none;

        &:checked {
            ~ .optionsMenuToggle .icon {
                transform: rotate(45deg);
            }

            ~ .optionsMenu .optionsMenu__backdrop {
                display: block;
            }

            ~ .optionsMenu {
                display: flex;
            }
        }
    }
  }

  .optionsMenu {
    display: none;
    align-items: center;
    justify-content: center;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    height: 100vh;
    width: 100vw;

    &__backdrop {
        display: none;
        position: absolute;
        z-index: 5;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        background-color: rgba(0,0,0,0.5);
        height: 100vh;
        width: 100vw;
    }

    &__close {
        position: absolute;
        cursor: pointer;
        top: .75rem;
        right: .75rem;
        opacity: .35;
    }

    &__inner {
        position: relative;
        z-index: 6;
        width: 550px;
        background-color: var(--body-bg);
        border-radius: 6px;
        padding: 2rem;
        box-shadow: 0px 0px 15px 12px rgba(0,0,0,0.5);

        display: flex;
        flex-direction: column;

        > div:not(:last-of-type) {
            margin-bottom: 2rem;
        }

        span {
            display: block;
            text-transform: uppercase;
            font-weight: bold;
            font-size: 1.5rem;
            margin-bottom: .5rem;
        }

        p {
            margin-bottom: .5rem;
        }
    }

    &__language {
        
    }

  }
}

